RESOLVED FIXED159181
Web Inspector: When modifying sessionStorage, localStorage gets updated
https://bugs.webkit.org/show_bug.cgi?id=159181
Summary Web Inspector: When modifying sessionStorage, localStorage gets updated
Joseph Pecoraro
Reported 2016-06-27 17:07:04 PDT
Summary: When modifying sessionStorage, localStorage gets updated Steps to Reproduce: 1. Inspect <http://html5demos.com/storage> 2. Show Session Storage in Storage Tab 3. Type in the sessionStorage box in the web page => Expected Session Storage content view to update, it did not. => Instead, the Local Storage content view updates. Unexpected! Notes: - The domStorageItemUpdated event is saying isLocalStorage:true, that is wrong! CONSOLE LOG event: {"method":"DOMStorage.domStorageItemUpdated","params":{"storageId":{"securityOrigin":"http://html5demos.com","isLocalStorage":true},"key":"timestamp","oldValue":"1467063160418","newValue":"1467063330376"}}
Attachments
[PATCH] Proposed Fix (11.35 KB, patch)
2016-06-27 17:13 PDT, Joseph Pecoraro
timothy: review+
bburg: commit-queue-
[PATCH] For Landing (Test Fixes) (10.35 KB, patch)
2016-06-27 17:34 PDT, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2016-06-27 17:07:28 PDT
Joseph Pecoraro
Comment 2 2016-06-27 17:13:35 PDT
Created attachment 282188 [details] [PATCH] Proposed Fix
Blaze Burg
Comment 3 2016-06-27 17:27:11 PDT
Comment on attachment 282188 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=282188&action=review > LayoutTests/inspector/storage/domStorage-events.html:33 > + InspectorBackend.dumpInspectorProtocolMessages = true; Do not leave these in when you commit.
Joseph Pecoraro
Comment 4 2016-06-27 17:34:26 PDT
Created attachment 282193 [details] [PATCH] For Landing (Test Fixes)
WebKit Commit Bot
Comment 5 2016-06-27 17:55:24 PDT
Comment on attachment 282193 [details] [PATCH] For Landing (Test Fixes) Clearing flags on attachment: 282193 Committed r202529: <http://trac.webkit.org/changeset/202529>
Note You need to log in before you can comment on or make changes to this bug.