Web Inspector: When modifying sessionStorage, localStorage gets updated https://bugs.webkit.org/show_bug.cgi?id=159181 <rdar://problem/27043447>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-06-27
Reviewed by Timothy Hatcher.

Source/WebInspectorUI:

* UserInterface/Test/Test.js:
(WebInspector.loaded):
Add registration for StorageManager and StorageObserver.

Source/WebKit2:

* WebProcess/Storage/StorageAreaMap.cpp:
(WebKit::StorageAreaMap::dispatchSessionStorageEvent):
This should be dispatching storage events.

LayoutTests:

* inspector/storage/domStorage-events-expected.txt: Added.
* inspector/storage/domStorage-events.html: Added.
Add a new test for DOMStorage domain events. Ensures that sessionStorage
and localStorage events are dispatched for the appropriate DOMStorageObject.

Canonical link: https://commits.webkit.org/177280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202529 268f45cc-cd09-0410-ab3c-d52691b4dbfc